k8s/base/api-node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node
spec:
  type: ClusterIP
  selector: { app: api-node }
  ports:
    - port: 80
      targetPort: 3000
