k8s/base/api-python-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-python
spec:
  type: ClusterIP
  selector: { app: api-python }
  ports:
    - port: 80
      targetPort: 5000
