k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /api/node/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-node
            port:
              number: 80
      - path: /api/python/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-python
            port:
              number: 80
